fixes #173 Add empty "if" step through dropdown "add step" menu proper align dropdown options

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -175,6 +175,12 @@ input.n {
       background-color: #cae3f1;
     }
 
+    // otherwise style of icons in dropdown menu where affected if the action is selected
+    .dropdown-menu i[class^="i25-"] {
+      background-position-y: 0px;
+      background-color: transparent;
+    }
+
     i[class^="i40-"] {
       background-position-y: -40px;
     }
